Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128916

QComboBox drop down is not visible on Windows11 in some situation

XMLWordPrintable

    • Windows
    • 5fc968ade (dev), d9a3b03b4 (6.8), 847c0bf07 (dev), 969fbfb89 (6.9), dde7c6c98 (6.8)

      If a custom delegate is used with QTreeView which provides a QComboBox as editor, the combo box popup does not open. This works on Windows 10 with explicitly calling showPopup in an evenFilter but very strangely same code does not works with Windows11. 

      This is the case when QTreeView is used in QGrapchicsView using QGraphicsProxyWidget.

      Attached example can be used on windows 11 to reproduce.

        1. qtbug128916.zip
          6 kB
          Irfan Omair
        For Gerrit Dashboard: QTBUG-128916
        # Subject Branch Project Status CR V

            owaisakhtar Owais Akhtar
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: