Disable QGraphicsEffect when QComboBox added inside QGraphicsProxyWidget

The QComboBox dropdown doesnt render when its added to a
QGraphicsProxyWidget and any QGraphicsEffect is added to it.

Fixes: QTBUG-128916
Fixes: QTBUG-128329
Pick-to: 6.8
Change-Id: I7f9b7ceea9afa819fcd4785250859ea7b7c85f69
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>